# dj-bot

./: .gitmodules  Cargo.toml  LICENSE  README.md  sqlx-data.json
.github/: FUNDING.yml
migrations/: 20201122035444_perms.sql  20201218003403_guild_id_table.sql  20201218011347_prefixes.sql  20210216010033_text_instead_of_varchar.sql
src/: checks.rs  consts.rs  data.rs  db.rs  dj_only_store.rs  events.rs  lyrics_api.rs  main.rs  playlists.rs  queue.rs  state.rs  util.rs  voice_events.rs  yt_playlist_stream.rs
src/commands/: consts.rs  db_testing.rs  dj_only.rs  help.rs  info.rs  join.rs  leave.rs  loop_command.rs  lyrics.rs  mod.rs  mute.rs  now_playing.rs  pause.rs  perms.rs  ping.rs  play.rs  playlist_testing.rs  prefix.rs  queue.rs  remove.rs  restart.rs  resume.rs  shuffle.rs  skip.rs  stop.rs  volume.rs
src/commands/perms/: admin.rs  blacklist.rs  dj.rs  mod.rs
