[package]
name = "dj-bot"
version = "1.0.0"
authors = ["Spencer <spencervess@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
uuid = "0.8"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1.0"
rand = "0.8"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bb8-redis = "0.10"
sys-info = "0.9"
parking_lot = "0.11"
serenity = { version = "0.10", features = ["absolute_ratelimits"] }
songbird = "0.2"
dashmap = "4.0"
mimalloc = "0.1"

[build-dependencies]
built = "0.5.1"
