[package]
name = "dj-bot"
version = "1.0.0"
authors = ["Spencer <spencervess@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.11.0", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "signal",
] }
tracing = "0.1.27"
tracing-subscriber = "0.2.23"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
uuid = "0.8.2"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "postgres", "offline"] }
anyhow = "1.0.44"
rand = "0.8.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bb8-redis = "0.10.1"
sys-info = "0.9.0"
parking_lot = "0.11.2"
serenity = { version = "0.10.9", features = ["absolute_ratelimits"] }
songbird = { path = "songbird", features = ["youtube-dlc"] }
audiopus_sys = { path = "audiopus_sys" }
dashmap = "4.0.2"
mimalloc = "0.1.26"
indexmap = "=1.6.2"

[build-dependencies]
built = "0.5.1"
