[package]
name = "dj-bot"
version = "1.0.0"
authors = ["Spencer <spencervess@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.21.1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "signal",
] }
tracing = "0.1.36"
tracing-subscriber = "0.2.25"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
uuid = "0.8.2"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "offline"] }
anyhow = "1.0.65"
rand = "0.8.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
bb8-redis = "0.10.1"
sys-info = "0.9.1"
parking_lot = "0.11.2"
serenity = { version = "0.10.10", features = ["absolute_ratelimits"] }
songbird = { path = "songbird", features = ["youtube-dlc"] }
audiopus_sys = { path = "audiopus_sys" }
dashmap = "4.0.2"
mimalloc = "0.1.29"
indexmap = "=1.6.2"

[build-dependencies]
built = "0.5.1"
